[package]
name = "bingo-board"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Storage", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"
